--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
         </head>
         <body>
             <p>Hello World, my name is Bijay Shrestha and this is my Capstone Project!</p>
-        </body>    
+        </string>    
     </html>
