--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
             <title>Cloud DevOps Engineer Nanodegree Capstone Project</title>
         </head>
         <body>
-            <p>Hello World, my name is Bijay Shrestha and this is my Capstone Project!</p>
-        </string>    
+            <p>Hello World, my name is Bijay Shrestha!</p>
+        </body>    
     </html>
